Excercise 1: Extend columns of blogs admin view

--- a/portal-web/docroot/html/portlet/blogs_admin/search_columns.jspf
+++ b/portal-web/docroot/html/portlet/blogs_admin/search_columns.jspf
@@ -39,3 +39,21 @@
 	href="<%= rowURL %>"
 	name="status"
 />
+
+<liferay-ui:search-container-column-text
+	name="num-of-views"
+	orderable="<%= false %>"
+	value="<%= String.valueOf(viewCount) %>"
+/>
+
+<liferay-ui:search-container-column-text
+	name="num-of-comments"
+	orderable="<%= false %>"
+	value="<%= String.valueOf(commentsCount) %>"
+/>
+
+<liferay-ui:search-container-column-text
+	name="average-ratings"
+	orderable="<%= false %>"
+	value="<%= String.valueOf(averageRatings) %>"
+/>
